second commit - lot of changes. fixed health check